<resources>
    <string name="app_name">FitnessMantra</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="WelcomeText">Welcome To The World Of Fitness</string>
    <string name="ExceriseButtonText">Excercise</string>
    <string name="DietButtonText">Diet</string>
    <string name="BMICaluBUttonText">BMI Calculator</string>
    <string name="AboutUsButtonText">About Us?</string>
    <string name="RateUsEditText">Rate Us!!!</string>
    <string name="BmiText">Bmi Calculator</string>
    <string name="extpandableEditText">Exercise!</string>
    <string name="hieghtEditText">Enter Height In Inches\'s</string>
    <string name="weightEditText">Enter Weight In Kg\'s</string>
    <string name="buttonEditString">Calculate!</string>
    <string name="calculatebutton">Calculate</string>
    <string name="title_text">Bmi Calculator</string>
    <string name="button_submit">Calculate</string>
    <string name="height_feet">feet</string>
    <string name="height_inch">inch</string>
    <string name="weight_text">Enter Weight in Kg</string>
    <string name="Bmi_cal">Bmi:</string>
    <string name="excercise7min_buttton">7-Minitue Excercise</string>
    <string name="title_activity_bmi_calcy">Bmi_calcy</string>
    <string name="title_activity_exercise">exercise</string>
    <string name="title_activity_seven_minitue_excercise">seven_minitue_excercise</string>
    <string name="title_activity_exercise_view">exercise_view</string>
    <string name="diet_button">Diet</string>
    <string name="title_activity_custom__list_view">Custom_ListView</string>
    <string name="title_activity_diet">diet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
