<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sonal.fitnessmantra.Bmi_calcy"
    android:background="#a8000000">
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Bmi_Frame">
    <TextView
        android:id="@+id/title"
        android:layout_marginTop="35dp"
        android:text="@string/title_text"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/UserHeight"
        android:layout_marginTop="58dp"
        android:textColorHint="#000"
        android:textSize="25sp"
        android:inputType="numberDecimal"
        android:gravity="center_horizontal"
        android:hint="@string/height_feet"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title" />
    <EditText
        android:hint="@string/height_inch"
        android:textSize="25sp"
        android:textColorHint="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:id="@+id/HeightInch"
        android:layout_alignTop="@+id/UserHeight"
        android:layout_alignEnd="@+id/title" />
    <EditText
        android:id="@+id/UserWeight"
        android:textSize="22sp"
        android:inputType="numberDecimal"
        android:textColorHint="#000"
        android:gravity="center_horizontal"
        android:hint="@string/weight_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/Submit"
        android:layout_marginTop="52dp"
        android:text="@string/calculatebutton"
        android:textSize="22sp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserWeight"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Bmi_cal"
        android:textColor="#000"
        android:textSize="26sp"
        android:id="@+id/textView"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/Submit"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
