<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/Main_Frame"
    android:background="@drawable/letstryit">

    <TextView android:text="@string/WelcomeText" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#d6a6da"
        android:id="@+id/welcome_textView"
        android:focusable="true"
        android:textStyle="bold|normal"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExceriseButtonText"
        android:id="@+id/Excercise_button"
        android:layout_below="@+id/Bmi_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:enabled="true"
        android:textStyle="bold|normal"
        android:onClick="onClickExerciseButton"
        android:clickable="true"
        android:width="170dip"
        android:background="@drawable/classicalbuttton"
        android:textColor="#d6a6da" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BMICaluBUttonText"
        android:id="@+id/Bmi_Button"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold|normal"
        android:onClick="onClick"
        android:width="170dip"
        android:background="@drawable/classicalbuttton"
        android:textColor="#d6a6da" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excercise7min_buttton"
        android:id="@+id/seven_min_button"
        android:clickable="true"
        android:enabled="true"
        android:textStyle="bold|normal"
        android:onClick="onClickseven"
        android:background="@drawable/classicalbuttton"
        android:layout_marginTop="170dip"
        android:layout_centerHorizontal="true"
        android:width="170dip"
        android:textColor="#d6a6da"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_button"
        android:id="@+id/diet_button"
        android:layout_below="@+id/seven_min_button"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:enabled="true"
        android:background="@drawable/classicalbuttton"
        android:textStyle="bold"
        android:layout_marginTop="30dip"
        android:width="170dip"
        android:longClickable="false"
        android:onClick="onClickDietButton"
        android:textColor="#d6a6da"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ideal Weight"
        android:background="@drawable/classicalbuttton"
        android:id="@+id/Ideal_button"
        android:layout_marginTop="30dip"
        android:layout_below="@+id/diet_button"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onClickIdealButton"
        android:width="170dip"
        android:textColor="#d6a6da"/>

</RelativeLayout>
